[package]
name = "mdview"
version = "0.2.0"
edition = "2021"
description = "A minimal, high-performance CLI tool that renders Markdown files with browser"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
open = "5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
base64 = "0.22"
